// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AsciidocPage > renders correctly for installation page 1`] = `
<div>
  <div
    class="relative pt-40 pb-16 md:pb-36 md:pt-60 overflow-hidden"
  >
    <div
      class="w-full relative"
    >
      <div
        class="absolute z-[-1] w-[2396px] h-[1340px] left-[23px] md:left-[112px] top-[21px] md:top-[171px] bg-[#410170] shadow-[0_0_400px_rgba(65,1,112,1)] rounded-full blur-[400px]"
      />
      <div
        class="absolute z-[-1] w-[1487px] h-[893px] left-[120px] md:left-[676px] top-[120px] md:top-[395px] bg-[#B62987] shadow-[0_0_400px_rgba(182,41,135,1)] rounded-full blur-[400px]"
      />
      <div
        class="absolute z-[-1] w-[688px] h-[446px] left-[400px] md:left-[1131px] top-[618px] bg-[#FE8492] shadow-[0_0_400px_rgba(254,132,146,1)] rounded-full blur-[400px]"
      />
    </div>
    <div
      class="mx-auto max-w-[1048px] w-full px-6 lg:px-0 flex flex-col items-center justify-center"
    >
      <div
        class="self-stretch flex-col justify-center items-center gap-6 flex"
      >
        <div
          class="self-stretch flex-col justify-center items-center gap-4 flex"
        >
          <div
            class="justify-start items-center gap-3 inline-flex"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#FF1464"
                height="8"
                rx="2"
                width="8"
                x="3"
                y="3"
              />
              <rect
                height="11"
                rx="3.5"
                stroke="#FF1464"
                stroke-opacity="0.25"
                stroke-width="3"
                width="11"
                x="1.5"
                y="1.5"
              />
            </svg>
            <div
              class="text-rose-600 text-base font-bold leading-normal"
            >
              Documentation
            </div>
          </div>
          <div
            class="self-stretch text-center text-white text-[56px] lg:text-[80px] leading-[114.286%] md:leading-[120%] font-semibold"
          >
            Page Title
          </div>
        </div>
        <div
          class="self-stretch text-center text-lightgrey text-[20px] font-normal leading-[140%] undefined"
        />
      </div>
    </div>
  </div>
  <section
    class="mx-auto max-w-4xl w-full p-6 lg:px-0 flex flex-col items-center justify-center"
  >
    <div
      class="asciidoc-container w-full"
      id="asciidoc-container"
    >
      <div
        class="col-lg-3 hide-on-mobile"
      />
      <div
        class="asciidoc col-lg-6 col-md-12"
      >
        <section
          class="adopt-demo-container hidden md:block my-5"
        >
          <div
            class="adopt-demo mx-auto"
          >
            <div
              class="install"
            >
              <div
                class="react-tabs"
                data-rttabs="true"
              >
                <div
                  class="install__header"
                >
                  <div
                    class="install__header-circles"
                  >
                    <div
                      class="install__header-grey-circle red"
                    />
                    <div
                      class="install__header-grey-circle yellow"
                    />
                    <div
                      class="install__header-grey-circle green"
                    />
                  </div>
                  <div
                    class="install__header-text"
                  >
                    bash
                  </div>
                </div>
                <ul
                  class="react-tabs__tab-list"
                  role="tablist"
                >
                  <li
                    aria-controls="panel«r0»0"
                    aria-disabled="false"
                    aria-selected="true"
                    class="react-tabs__tab react-tabs__tab--selected"
                    data-rttab="true"
                    id="tab«r0»0"
                    role="tab"
                    tabindex="0"
                  >
                    Windows (Winget)
                  </li>
                  <li
                    aria-controls="panel«r0»1"
                    aria-disabled="false"
                    aria-selected="false"
                    class="react-tabs__tab"
                    data-rttab="true"
                    id="tab«r0»1"
                    role="tab"
                  >
                    macOS (Homebrew)
                  </li>
                  <li
                    aria-controls="panel«r0»2"
                    aria-disabled="false"
                    aria-selected="false"
                    class="react-tabs__tab"
                    data-rttab="true"
                    id="tab«r0»2"
                    role="tab"
                  >
                    Linux (RPM/DEB)
                  </li>
                </ul>
                <div
                  aria-labelledby="tab«r0»0"
                  class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                  id="panel«r0»0"
                  role="tabpanel"
                >
                  <div>
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Install the latest version
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget install 
                        </span>
                        EclipseAdoptium.Temurin.
                        21
                        .JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Install a different version
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget install 
                        </span>
                        EclipseAdoptium.Temurin.11.JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Upgrade the Winget package
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget upgrade 
                        </span>
                        EclipseAdoptium.Temurin.
                        21
                        .JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Uninstall the Winget package
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget uninstall 
                        </span>
                        EclipseAdoptium.Temurin.
                        21
                        .JDK
                      </code>
                    </pre>
                    <a
                      class="install__docs-button"
                      href="https://docs.microsoft.com/en-us/windows/package-manager/winget/"
                    >
                      Read documentation
                    </a>
                  </div>
                </div>
                <div
                  aria-labelledby="tab«r0»1"
                  class="react-tabs__tab-panel"
                  id="panel«r0»1"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="tab«r0»2"
                  class="react-tabs__tab-panel"
                  id="panel«r0»2"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </section>
        <div
          class="asciidoc-content prose prose-invert lg:prose-lg max-w-none"
        >
          <div
            class="prose prose-invert lg:prose-lg max-w-none"
          >
            <div>
              Mock content
            </div>
          </div>
        </div>
        <div
          class="h-px my-5 border border-gray-700"
        />
        <div
          class="mt-10 flex-col justify-center items-start gap-4"
        >
          <div
            class="self-stretch text-white my-5 text-lg font-semibold leading-normal"
          >
            Text
          </div>
          <div
            class="flex flex-wrap justify-start items-center space-x-[-12px]"
          >
            <a
              aria-label="Author"
              href="https://github.com/Author"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="Author"
                class="rounded-full border-solid border-4 border-purple mb-6"
                data-nimg="1"
                decoding="async"
                height="55"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=128&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=64&q=75 1x, /_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=128&q=75 2x"
                style="color: transparent;"
                width="55"
              />
            </a>
          </div>
        </div>
        <div
          class="w-full backdrop-blur-sm bg-gradient-to-br from-[#20114D]/30 to-[#2A0845]/40 px-8 py-6 rounded-2xl border border-white/10 shadow-lg transform transition-all duration-300 hover:shadow-xl hover:border-white/20 flex flex-col md:flex-row justify-between items-center gap-6"
        >
          <div
            class="flex items-center gap-5"
          >
            <div
              class="relative w-16 h-16 md:w-20 md:h-20 flex-shrink-0"
            >
              <div
                class="absolute inset-0 bg-gradient-to-tr from-pink-500 to-purple-600 rounded-full opacity-30 blur-md"
              />
              <img
                alt="edit icon"
                class="relative w-full h-full p-3 bg-[#200D46]/60 border border-white/20 rounded-full shadow-md"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="/images/icons/edit.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
            <div
              class="flex flex-col gap-2"
            >
              <h3
                class="text-white text-xl md:text-2xl font-bold leading-tight"
              >
                Text
              </h3>
              <p
                class="text-white/90 text-sm md:text-base font-normal leading-relaxed max-w-lg"
              >
                Text
              </p>
            </div>
          </div>
          <a
            class="flex-shrink-0"
            href="https://github.com/adoptium/adoptium.net/edit/main/content/asciidoc-pages/installation/path.adoc"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="group relative px-6 py-3 overflow-hidden rounded-xl bg-gradient-to-r from-[#FF3366] to-[#9933FF] text-white text-base leading-6 font-medium shadow-md transition-all duration-300 hover:shadow-lg hover:scale-105"
            >
              <span
                class="relative z-10 flex items-center gap-2"
              >
                <svg
                  class="h-5 w-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
                  />
                </svg>
                Text
              </span>
              <div
                class="absolute inset-0 w-full h-full bg-gradient-to-r from-pink-600 to-purple-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
              />
            </button>
          </a>
        </div>
      </div>
      <div
        class="col-lg-3 hide-on-mobile"
      />
    </div>
  </section>
  <section
    class="relative xl:px-0 px-6 md:py-32 py-16 "
  >
    <img
      alt="gradient overlay"
      class="hidden md:block absolute bg-center top-0 left-0 right-0 w-full h-full z-[-10]"
      data-nimg="fill"
      decoding="async"
      sizes="100vw"
      src="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=3840&q=75 3840w"
      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
    />
    <img
      alt="gradient overlay mobile"
      class="block md:hidden absolute bg-center top-0 left-0 right-0 w-full h-full z-[-10]"
      data-nimg="fill"
      decoding="async"
      sizes="100vw"
      src="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=3840&q=75 3840w"
      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
    />
    <div
      class="max-w-[832px] w-full mx-auto md:py-0 py-8 flex justify-center items-center flex-col text-center bg-transparent rounded-3xl md:backdrop-blur-0 backdrop-blur-12"
    >
      <img
        alt="message icon"
        class="!mb-0"
        data-nimg="1"
        decoding="async"
        height="120"
        loading="lazy"
        src="/images/icons/message.svg"
        style="color: transparent;"
        width="120"
      />
      <p
        class="text-white text-4xl md:text-5xl leading-[122.222%] md:leading-[116.667%] font-normal mt-8 mb-6"
      >
        Connect with the community
      </p>
      <span
        class="text-gray-300 text-base leading-6"
      >
        Join our Slack channel to discuss work and reach out to project maintainers.
      </span>
      <a
        href="/slack"
      >
        <button
          class="bg-transparent mt-10 border-2 border-pink-500/0 text-white text-base leading-6 font-bold w-[191px] h-[48px] rounded-2xl gradient-border"
        >
          Learn More
        </button>
      </a>
    </div>
  </section>
</div>
`;

exports[`AsciidocPage > renders correctly with English locale 1`] = `
<div>
  <div
    class="relative pt-40 pb-16 md:pb-36 md:pt-60 overflow-hidden"
  >
    <div
      class="w-full relative"
    >
      <div
        class="absolute z-[-1] w-[2396px] h-[1340px] left-[23px] md:left-[112px] top-[21px] md:top-[171px] bg-[#410170] shadow-[0_0_400px_rgba(65,1,112,1)] rounded-full blur-[400px]"
      />
      <div
        class="absolute z-[-1] w-[1487px] h-[893px] left-[120px] md:left-[676px] top-[120px] md:top-[395px] bg-[#B62987] shadow-[0_0_400px_rgba(182,41,135,1)] rounded-full blur-[400px]"
      />
      <div
        class="absolute z-[-1] w-[688px] h-[446px] left-[400px] md:left-[1131px] top-[618px] bg-[#FE8492] shadow-[0_0_400px_rgba(254,132,146,1)] rounded-full blur-[400px]"
      />
    </div>
    <div
      class="mx-auto max-w-[1048px] w-full px-6 lg:px-0 flex flex-col items-center justify-center"
    >
      <div
        class="self-stretch flex-col justify-center items-center gap-6 flex"
      >
        <div
          class="self-stretch flex-col justify-center items-center gap-4 flex"
        >
          <div
            class="justify-start items-center gap-3 inline-flex"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#FF1464"
                height="8"
                rx="2"
                width="8"
                x="3"
                y="3"
              />
              <rect
                height="11"
                rx="3.5"
                stroke="#FF1464"
                stroke-opacity="0.25"
                stroke-width="3"
                width="11"
                x="1.5"
                y="1.5"
              />
            </svg>
            <div
              class="text-rose-600 text-base font-bold leading-normal"
            >
              Documentation
            </div>
          </div>
          <div
            class="self-stretch text-center text-white text-[56px] lg:text-[80px] leading-[114.286%] md:leading-[120%] font-semibold"
          >
            Page Title
          </div>
        </div>
        <div
          class="self-stretch text-center text-lightgrey text-[20px] font-normal leading-[140%] undefined"
        />
      </div>
    </div>
  </div>
  <section
    class="mx-auto max-w-4xl w-full p-6 lg:px-0 flex flex-col items-center justify-center"
  >
    <div
      class="asciidoc-container w-full"
      id="asciidoc-container"
    >
      <div
        class="col-lg-3 hide-on-mobile"
      />
      <div
        class="asciidoc col-lg-6 col-md-12"
      >
        <div
          class="asciidoc-content prose prose-invert lg:prose-lg max-w-none"
        >
          <div
            class="prose prose-invert lg:prose-lg max-w-none"
          >
            <div>
              Mock content
            </div>
          </div>
        </div>
        <div
          class="h-px my-5 border border-gray-700"
        />
        <div
          class="mt-10 flex-col justify-center items-start gap-4"
        >
          <div
            class="self-stretch text-white my-5 text-lg font-semibold leading-normal"
          >
            Text
          </div>
          <div
            class="flex flex-wrap justify-start items-center space-x-[-12px]"
          >
            <a
              aria-label="Author"
              href="https://github.com/Author"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="Author"
                class="rounded-full border-solid border-4 border-purple mb-6"
                data-nimg="1"
                decoding="async"
                height="55"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=128&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=64&q=75 1x, /_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=128&q=75 2x"
                style="color: transparent;"
                width="55"
              />
            </a>
          </div>
        </div>
        <div
          class="w-full backdrop-blur-sm bg-gradient-to-br from-[#20114D]/30 to-[#2A0845]/40 px-8 py-6 rounded-2xl border border-white/10 shadow-lg transform transition-all duration-300 hover:shadow-xl hover:border-white/20 flex flex-col md:flex-row justify-between items-center gap-6"
        >
          <div
            class="flex items-center gap-5"
          >
            <div
              class="relative w-16 h-16 md:w-20 md:h-20 flex-shrink-0"
            >
              <div
                class="absolute inset-0 bg-gradient-to-tr from-pink-500 to-purple-600 rounded-full opacity-30 blur-md"
              />
              <img
                alt="edit icon"
                class="relative w-full h-full p-3 bg-[#200D46]/60 border border-white/20 rounded-full shadow-md"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="/images/icons/edit.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
            <div
              class="flex flex-col gap-2"
            >
              <h3
                class="text-white text-xl md:text-2xl font-bold leading-tight"
              >
                Text
              </h3>
              <p
                class="text-white/90 text-sm md:text-base font-normal leading-relaxed max-w-lg"
              >
                Text
              </p>
            </div>
          </div>
          <a
            class="flex-shrink-0"
            href="https://github.com/adoptium/adoptium.net/edit/main/content/asciidoc-pages/test/path.adoc"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="group relative px-6 py-3 overflow-hidden rounded-xl bg-gradient-to-r from-[#FF3366] to-[#9933FF] text-white text-base leading-6 font-medium shadow-md transition-all duration-300 hover:shadow-lg hover:scale-105"
            >
              <span
                class="relative z-10 flex items-center gap-2"
              >
                <svg
                  class="h-5 w-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
                  />
                </svg>
                Text
              </span>
              <div
                class="absolute inset-0 w-full h-full bg-gradient-to-r from-pink-600 to-purple-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
              />
            </button>
          </a>
        </div>
      </div>
      <div
        class="col-lg-3 hide-on-mobile"
      />
    </div>
  </section>
  <section
    class="relative xl:px-0 px-6 md:py-32 py-16 "
  >
    <img
      alt="gradient overlay"
      class="hidden md:block absolute bg-center top-0 left-0 right-0 w-full h-full z-[-10]"
      data-nimg="fill"
      decoding="async"
      sizes="100vw"
      src="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=3840&q=75 3840w"
      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
    />
    <img
      alt="gradient overlay mobile"
      class="block md:hidden absolute bg-center top-0 left-0 right-0 w-full h-full z-[-10]"
      data-nimg="fill"
      decoding="async"
      sizes="100vw"
      src="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=3840&q=75 3840w"
      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
    />
    <div
      class="max-w-[832px] w-full mx-auto md:py-0 py-8 flex justify-center items-center flex-col text-center bg-transparent rounded-3xl md:backdrop-blur-0 backdrop-blur-12"
    >
      <img
        alt="message icon"
        class="!mb-0"
        data-nimg="1"
        decoding="async"
        height="120"
        loading="lazy"
        src="/images/icons/message.svg"
        style="color: transparent;"
        width="120"
      />
      <p
        class="text-white text-4xl md:text-5xl leading-[122.222%] md:leading-[116.667%] font-normal mt-8 mb-6"
      >
        Connect with the community
      </p>
      <span
        class="text-gray-300 text-base leading-6"
      >
        Join our Slack channel to discuss work and reach out to project maintainers.
      </span>
      <a
        href="/slack"
      >
        <button
          class="bg-transparent mt-10 border-2 border-pink-500/0 text-white text-base leading-6 font-bold w-[191px] h-[48px] rounded-2xl gradient-border"
        >
          Learn More
        </button>
      </a>
    </div>
  </section>
</div>
`;

exports[`AsciidocPage > renders correctly with non-English locale 1`] = `
<div>
  <div
    class="relative pt-40 pb-16 md:pb-36 md:pt-60 overflow-hidden"
  >
    <div
      class="w-full relative"
    >
      <div
        class="absolute z-[-1] w-[2396px] h-[1340px] left-[23px] md:left-[112px] top-[21px] md:top-[171px] bg-[#410170] shadow-[0_0_400px_rgba(65,1,112,1)] rounded-full blur-[400px]"
      />
      <div
        class="absolute z-[-1] w-[1487px] h-[893px] left-[120px] md:left-[676px] top-[120px] md:top-[395px] bg-[#B62987] shadow-[0_0_400px_rgba(182,41,135,1)] rounded-full blur-[400px]"
      />
      <div
        class="absolute z-[-1] w-[688px] h-[446px] left-[400px] md:left-[1131px] top-[618px] bg-[#FE8492] shadow-[0_0_400px_rgba(254,132,146,1)] rounded-full blur-[400px]"
      />
    </div>
    <div
      class="mx-auto max-w-[1048px] w-full px-6 lg:px-0 flex flex-col items-center justify-center"
    >
      <div
        class="self-stretch flex-col justify-center items-center gap-6 flex"
      >
        <div
          class="self-stretch flex-col justify-center items-center gap-4 flex"
        >
          <div
            class="justify-start items-center gap-3 inline-flex"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#FF1464"
                height="8"
                rx="2"
                width="8"
                x="3"
                y="3"
              />
              <rect
                height="11"
                rx="3.5"
                stroke="#FF1464"
                stroke-opacity="0.25"
                stroke-width="3"
                width="11"
                x="1.5"
                y="1.5"
              />
            </svg>
            <div
              class="text-rose-600 text-base font-bold leading-normal"
            >
              Documentation
            </div>
          </div>
          <div
            class="self-stretch text-center text-white text-[56px] lg:text-[80px] leading-[114.286%] md:leading-[120%] font-semibold"
          >
            Page Title
          </div>
        </div>
        <div
          class="self-stretch text-center text-lightgrey text-[20px] font-normal leading-[140%] undefined"
        />
      </div>
    </div>
  </div>
  <section
    class="mx-auto max-w-4xl w-full p-6 lg:px-0 flex flex-col items-center justify-center"
  >
    <div
      class="asciidoc-container w-full"
      id="asciidoc-container"
    >
      <div
        class="col-lg-3 hide-on-mobile"
      />
      <div
        class="asciidoc col-lg-6 col-md-12"
      >
        <div
          class="mb-6 bg-purple-950/40 border-l-4 border-purple-400 p-4 rounded-md shadow-sm"
        >
          <div
            class="flex"
          >
            <div
              class="flex-shrink-0"
            >
              <svg
                class="h-5 w-5 text-purple-400"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495zM10 5a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 0110 5zm0 9a1 1 0 100-2 1 1 0 000 2z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="ml-3"
            >
              <div
                class="text-sm text-gray-300"
              >
                <div>
                  Translated warning
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="asciidoc-content prose prose-invert lg:prose-lg max-w-none"
        >
          <div
            class="prose prose-invert lg:prose-lg max-w-none"
          >
            <div>
              Mock content
            </div>
          </div>
        </div>
        <div
          class="h-px my-5 border border-gray-700"
        />
        <div
          class="mt-10 flex-col justify-center items-start gap-4"
        >
          <div
            class="self-stretch text-white my-5 text-lg font-semibold leading-normal"
          >
            Text
          </div>
          <div
            class="flex flex-wrap justify-start items-center space-x-[-12px]"
          >
            <a
              aria-label="Author"
              href="https://github.com/Author"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="Author"
                class="rounded-full border-solid border-4 border-purple mb-6"
                data-nimg="1"
                decoding="async"
                height="55"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=128&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=64&q=75 1x, /_next/image?url=https%3A%2F%2Fgithub.com%2FAuthor.png%3Fsize%3D55&w=128&q=75 2x"
                style="color: transparent;"
                width="55"
              />
            </a>
          </div>
        </div>
        <div
          class="w-full backdrop-blur-sm bg-gradient-to-br from-[#20114D]/30 to-[#2A0845]/40 px-8 py-6 rounded-2xl border border-white/10 shadow-lg transform transition-all duration-300 hover:shadow-xl hover:border-white/20 flex flex-col md:flex-row justify-between items-center gap-6"
        >
          <div
            class="flex items-center gap-5"
          >
            <div
              class="relative w-16 h-16 md:w-20 md:h-20 flex-shrink-0"
            >
              <div
                class="absolute inset-0 bg-gradient-to-tr from-pink-500 to-purple-600 rounded-full opacity-30 blur-md"
              />
              <img
                alt="edit icon"
                class="relative w-full h-full p-3 bg-[#200D46]/60 border border-white/20 rounded-full shadow-md"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="/images/icons/edit.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
            <div
              class="flex flex-col gap-2"
            >
              <h3
                class="text-white text-xl md:text-2xl font-bold leading-tight"
              >
                Text
              </h3>
              <p
                class="text-white/90 text-sm md:text-base font-normal leading-relaxed max-w-lg"
              >
                Text
              </p>
            </div>
          </div>
          <a
            class="flex-shrink-0"
            href="https://github.com/adoptium/adoptium.net/edit/main/content/asciidoc-pages/test/path.adoc"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="group relative px-6 py-3 overflow-hidden rounded-xl bg-gradient-to-r from-[#FF3366] to-[#9933FF] text-white text-base leading-6 font-medium shadow-md transition-all duration-300 hover:shadow-lg hover:scale-105"
            >
              <span
                class="relative z-10 flex items-center gap-2"
              >
                <svg
                  class="h-5 w-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
                  />
                </svg>
                Text
              </span>
              <div
                class="absolute inset-0 w-full h-full bg-gradient-to-r from-pink-600 to-purple-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
              />
            </button>
          </a>
        </div>
      </div>
      <div
        class="col-lg-3 hide-on-mobile"
      />
    </div>
  </section>
  <section
    class="relative xl:px-0 px-6 md:py-32 py-16 "
  >
    <img
      alt="gradient overlay"
      class="hidden md:block absolute bg-center top-0 left-0 right-0 w-full h-full z-[-10]"
      data-nimg="fill"
      decoding="async"
      sizes="100vw"
      src="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay.png&w=3840&q=75 3840w"
      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
    />
    <img
      alt="gradient overlay mobile"
      class="block md:hidden absolute bg-center top-0 left-0 right-0 w-full h-full z-[-10]"
      data-nimg="fill"
      decoding="async"
      sizes="100vw"
      src="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=3840&q=75"
      srcset="/_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fbackgrounds%2Fgradient-overlay-mobile.png&w=3840&q=75 3840w"
      style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
    />
    <div
      class="max-w-[832px] w-full mx-auto md:py-0 py-8 flex justify-center items-center flex-col text-center bg-transparent rounded-3xl md:backdrop-blur-0 backdrop-blur-12"
    >
      <img
        alt="message icon"
        class="!mb-0"
        data-nimg="1"
        decoding="async"
        height="120"
        loading="lazy"
        src="/images/icons/message.svg"
        style="color: transparent;"
        width="120"
      />
      <p
        class="text-white text-4xl md:text-5xl leading-[122.222%] md:leading-[116.667%] font-normal mt-8 mb-6"
      >
        Connect with the community
      </p>
      <span
        class="text-gray-300 text-base leading-6"
      >
        Join our Slack channel to discuss work and reach out to project maintainers.
      </span>
      <a
        href="/slack"
      >
        <button
          class="bg-transparent mt-10 border-2 border-pink-500/0 text-white text-base leading-6 font-bold w-[191px] h-[48px] rounded-2xl gradient-border"
        >
          Learn More
        </button>
      </a>
    </div>
  </section>
</div>
`;
